[package]
name = "miniqueue"
version = "0.1.1"
authors = ["Silvio Henrique Ferreira <shferreira@me.com>"]
edition = "2018"

description = "A minimalistic single-thread job queue based on fold/reduce"
documentation = "https://docs.rs/miniqueue"
repository = "https://github.com/shff/paq"
readme = "README.md"
license = "MIT"

keywords = ["queue"]

[dependencies]
